--- a/style/main.css
+++ b/style/main.css
@@ -172,7 +172,10 @@ button, a, input, textarea, label, select, option{
 @media only screen and (max-width: 1000px){
     .loading-h1{
         font-size: 20px;
-        line-height: 56px;
+        line-height: 26px;
+    }
+    .loader-overlaytext{
+        height: 100vh;
     }
 }
 /*-------------------------------------------- contactus --------------------------------------------*/
@@ -1361,7 +1364,7 @@ p.cursor::after {
     }
     .review-section-slides-container{
         width: 100%;
-        height: 600px;
+        height: 800px;
     }
     .slide-para{
         width: 100%;
@@ -1372,6 +1375,10 @@ p.cursor::after {
     .review-section-reviews-container{
         /* height: 120%; */
         padding-bottom: 5rem;
+    }
+
+    .review-section-slide-bottom-container{
+        /* margin-top: 3rem; */
     }
 
     .slider-button-container{
@@ -1389,7 +1396,7 @@ p.cursor::after {
     .review-section-bg-slide{
         width: calc(100% - 32px);
         border-radius: 20px ;
-        bottom: 20px;
+        bottom: 60px;
         left: 50%;
         transform: translate(-50%,0);
         height: 80px;
@@ -1403,7 +1410,7 @@ p.cursor::after {
         position: absolute;
         width: calc(100% - 32px);
         border-radius: 20px ;
-        bottom: 30px;
+        bottom: 70px;
         left: 50%;
         transform: translate(-50%,0);
         height: 80px;
