--- a/style/main.css
+++ b/style/main.css
@@ -173,6 +173,7 @@ button, a, input, textarea, label, select, option{
     .loading-h1{
         font-size: 20px;
         line-height: 26px;
+        margin-bottom: 10%;
     }
     .loader-overlaytext{
         height: 100vh;
